--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,6 @@ spring:
     platform: postgres
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
-    show-sql: true
     properties:
       hibernate:
         default_schema: steady
@@ -52,3 +51,8 @@ server:
 jwt:
   secret: ENC(sUFhrnVPtAPMA1WaL7+3ssQix21bGOAp)
   expirationMs: 86400000
+logging:
+  config: classpath:log4j2-spring-fileonly.xml
+  file:
+    name: "./target/steady.log"
+    path: "./target"
